--- a/index.html
+++ b/index.html
@@ -37,5 +37,30 @@
         </div>
      </div>
      <!-- fine sezione alta pagina -->
+     <div class="spot">
+        <h2>LE SCUOLE DI LINGUA TRADIZIONALI NON SONO EFFICACI</h2>
+        <p>SOLO UN CORSO INCENTRATO SULLA FLUECY PUO' PORTARE AD UNA SOLUZIONE DEFINITIVA CONCRETA</p>
+     </div>
+
+
+     <!-- fine spot -->
+
+     <div class="clearfix contenitoredue">
+      <div class="box left">
+        <div class="img">
+          <img src="img/profile.svg" alt="">
+        </div>
+      </div>
+      <div class="box midle">
+        <div class="img_computer">
+          <img src="img/computer.svg" alt="">
+        </div>
+      </div>
+      <div class=" box right">
+        <div class="img_doc">
+          <img src="img/doc.svg" alt="">
+        </div>
+      </div>
+     </div>
   </body>
 </html>
