--- a/index.html
+++ b/index.html
@@ -46,19 +46,44 @@
      <!-- fine spot -->
 
      <div class="clearfix contenitoredue">
+
       <div class="box left">
         <div class="img">
           <img src="img/profile.svg" alt="">
         </div>
+        <div class="color_title">
+             <h3>Piano formativo configurato sul proprio livello</h3>
+        </div>
+        <hr>
+        <div class="content">
+          <p>Un modulo improntato sullo speakin personale dei partecipanti .tutto parte da un accurato test di partenza per definire il livello  e impostare gli obbiettivi da raggiungere</p>
+        </div>
       </div>
+
       <div class="box midle">
         <div class="img_computer">
           <img src="img/computer.svg" alt="">
         </div>
+        <div class="color_title">
+             <h3>affiancamento di un tutor</h3>
+        </div>
+        <hr>
+        <div class="content">
+          <p>Scopri il sillabus la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con il tutor nelle sessioni one to one</p>
+        </div>
+
       </div>
+
       <div class=" box right">
         <div class="img_doc">
           <img src="img/doc.svg" alt="">
+        </div>
+        <div class="color_title">
+             <h3>Monitora costantemente i tuoi progressi</h3>
+        </div>
+        <hr>
+        <div class="content">
+          <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema .Hai il pieno controllo sui miglioramenti e sugli obbiettivi raggiunti.</p>
         </div>
       </div>
      </div>
