--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
         <div class="content">
           <p>Scopri il sillabus la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con il tutor nelle sessioni one to one</p>
         </div>
-
       </div>
-
       <div class=" box right">
         <div class="img_doc">
           <img src="img/doc.svg" alt="">
@@ -86,6 +84,40 @@
           <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema .Hai il pieno controllo sui miglioramenti e sugli obbiettivi raggiunti.</p>
         </div>
       </div>
-     </div>
+    </div>
+    <!-- fine contenitore due  -->
+    <!-- contenitore tre  -->
+    <div class="contenitoretre clearfix">
+        <hr>
+
+        <div class="big_box">
+        <div class="img_mountain">
+          <img src="img/mountain.svg" alt="">
+        </div>
+        </div>
+        <div class="big_box">
+           <div class="content_text">
+                <h2>SCOPRI IL TUO LIVELLO INIZIALE E STRUTTURA UN PIANO PERSONALIZZATO</h2>
+                <p>L'ESPERIENZA  FLUENTIFY PARTE SEMPRE DA UN TEST DI PLACEMENT PER AVERE UNA CHIARA VISIONE DEL TUO INGLESE.</p>
+                <a href="#">Scopri il nostro placement</a>
+
+           </div>
+        </div>
+    </div>
+    <!-- fine contenitore tre -->
+
+    <!-- inizio footer -->
+    <footer class="clearfix">
+      <div class="footer_left">
+          <h2>Struttura un piano</h2>
+      </div>
+      <div class="footer_right">
+         <div class="but">
+              visualizza il tuo piano
+         </div>
+      </div>
+
+    </footer>
+
   </body>
 </html>
